# Parkify

./: .env.sample  .gitignore  README.md  api.yaml  app.py  pyproject.toml
application/extensions/: security_extn.py  session_extn.py
application/helpers/: config.py  models.py
application/middlewares/: init_cache_control.py  init_error.py  init_security.py  init_session.py
application/routes/admin/: admin_add_lot_route.py  admin_dash_route.py  admin_delete_lot_route.py  admin_edit_lot_route.py  admin_history_route.py  admin_profile_edit_route.py  admin_profile_route.py  admin_search_route.py  admin_view_spot_details_route.py  admin_view_spots_route.py  admin_view_users_route.py
application/routes/general/: home_route.py  login_route.py  logout_route.py  signup_route.py
application/routes/user/: user_book_slot_route.py  user_dash_route.py  user_history_route.py  (+5 more)
static/css/: select_parking_space.css
static/js/: admin_chart.js  auto_hide_alert.js  select_spot.js  user_chart.js
templates/admin/: admin_add_parking_lot.html  admin_dashboard.html  admin_edit_parking_lot.html  admin_edit_profile.html  admin_history.html  admin_list_users.html  admin_parking_spot_overview.html  admin_profile.html  admin_search_results.html  admin_single_spot_details.html
templates/components/: alerts.html  base.html  navbar.html
templates/general/: error.html  index.html  login.html  signup.html
templates/user/: user_dashboard.html  user_edit_profile.html  user_history.html  user_profile.html  user_release_spot.html  user_search_parking.html  user_select_parking_space.html
